--- a/styles.css
+++ b/styles.css
@@ -8,11 +8,11 @@ body, html {
 
 .container {
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(500px, 1fr)); /* Set minimum box width */
-    grid-auto-rows: 500px; /* Set box height */
-    gap: 20px; /* Space between boxes */
-    height: 400%;
-    padding: 40px;
+    grid-template-columns: repeat(5, 1fr); /* 5 columns */
+    grid-template-rows: repeat(2, 1fr); /* 2 rows */
+    gap: 10px; /* Space between boxes */
+    height: 100%;
+    padding: 20px;
     box-sizing: border-box; /* Ensure padding doesn't affect overall size */
 }
 
@@ -22,7 +22,6 @@ body, html {
     display: flex;
     align-items: center;
     justify-content: center;
-    font-size: 24px; /* Increased font size */
+    font-size: 24px; /* Font size */
     font-weight: bold;
 }
-
